Bug 1620173 - Avoid reading mActiveWindow in a content process in WindowHidden. r=NeilDeakin

Differential Revision: https://phabricator.services.mozilla.com/D66184

--HG--
extra : moz-landing-system : lando